@@ -1,6 +1,11 @@
 WebHelpers ChangeLog
 
 0.2.3 (**svn**)
+* Added environ checking with Routes so that page will be automatically pulled
+  out of the query string, or from the Routes match dict if available.
+* Added checking for objects that had assign_mapper applied to them.
+* Added better range checking to paginator to require a positive value that is
+  less than the total amount of pages available for a page.
 * WARNING: Due to a typo, the Text helper highlight function no longer
   highlights text with the CSS class name 'hilight' by default: it now uses the
   CSS class name 'highlight' instead. The function's 'hilighter' keyword
